--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,7 +109,7 @@ services:
       - "./mysql-initdb.d:/docker-entrypoint-initdb.d"
 
   postgres:
-    image: "${POSTGRES_IMAGE-postgres:alpine}"
+    image: "${POSTGRES_IMAGE-postgres:13}"
     environment:
       POSTGRES_HOST_AUTH_METHOD: "trust"
 
