Allow Test Analytics envs
https://buildkite.com/docs/test-analytics/ci-environments#buildkite

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,14 @@ services:
       BUILDKITE_JOB_ID:
       BUILDKITE_PARALLEL_JOB:
       BUILDKITE_PARALLEL_JOB_COUNT:
+      BUILDKITE_ANALYTICS_TOKEN:
+      BUILDKITE_ANALYTICS_DEBUG_ENABLED:
+      BUILDKITE_BRANCH:
+      BUILDKITE_BUILD_NUMBER:
+      BUILDKITE_BUILD_URL:
+      BUILDKITE_COMMIT:
+      BUILDKITE_MESSAGE:
+      BUILDKITE_LABEL:
       encrypted_0fb9444d0374_key:
       encrypted_0fb9444d0374_iv:
 
