--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
 
     volumes:
       - ../test-reports:/rails/test-reports
+      - ../log:/rails/log
 
     depends_on:
       - redis
