Add YJIT build for rails CI
This change adds a build for CI that will run rails main merges on Ruby
master with YJIT enabled. This will enable us to test against YJIT and
catch any potential regressions early. This will also make it easier to
find optimizations in YJIT that will benefit Rails because we can be
confident Rails is runnable with YJIT which will make it easier to
collect stats.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       BUILDKITE_PARALLEL_JOB_COUNT:
       encrypted_0fb9444d0374_key:
       encrypted_0fb9444d0374_iv:
+      RUBY_YJIT_ENABLE:
 
       # Sauce Labs username and access key. Obfuscated, purposefully not encrypted.
       ENCODED: "U0FVQ0VfQUNDRVNTX0tFWT1hMDM1MzQzZi1lOTIyLTQwYjMtYWEzYy0wNmIzZWE2MzVjNDggU0FVQ0VfVVNFUk5BTUU9cnVieW9ucmFpbHM="
