Run system tests for ActionText using Capybara.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,11 @@ services:
       - memcached
       - chrome
 
+  actiontext:
+    <<: *default
+    depends_on:
+      - chrome
+
   memcached:
     image: memcached:alpine
 
