Add an env var to let downstream know this was triggered by buildkite-config

--- a/buildkite-initial.yml
+++ b/buildkite-initial.yml
@@ -13,3 +13,4 @@ steps:
       env:
         CONFIG_REPO: "${BUILDKITE_PULL_REQUEST_REPO}"
         CONFIG_BRANCH: "${BUILDKITE_BRANCH}"
+        BUILDKITE_CONFIG_TRIGGER: true # This variable can be used downstream to avoid things like "if branch==main do Y"
