--- a/buildkite-initial.yml
+++ b/buildkite-initial.yml
@@ -7,7 +7,7 @@ steps:
   - trigger: "rails"
     label: ":pipeline: Run buildkite-config CI"
     build:
-      message: "${BUILDKITE_MESSAGE}"
+      message: "buildkite-config: ${BUILDKITE_MESSAGE}"
       commit: "${BUILDKITE_COMMIT}"
       branch: "main"
       env:
