Add block step and use rails-ci pipeline instead of main rails
This is to avoid potentially confusing results when the "main" branch fails, and sends discord messages because of testing CI changes.

We also don't want to accidentally execute some bad config so require approvals then we can allow builds from fork prs.

Co-authored-by: Matthew Draper <matthew@trebex.net>

--- a/buildkite-config-initial-pipeline.yml
+++ b/buildkite-config-initial-pipeline.yml
@@ -4,7 +4,10 @@
 # This config is intended for running the rails/buildkite-config CI.
 
 steps:
-  - trigger: "rails"
+  - block: "Review Build Script"
+    prompt: |
+      Approval is required. Please review the changes carefully before unblocking.
+  - trigger: "rails-ci"
     label: ":pipeline: Run buildkite-config CI"
     build:
       message: "buildkite-config: ${BUILDKITE_MESSAGE}"
