--- a/buildkite-config-initial-pipeline.yml
+++ b/buildkite-config-initial-pipeline.yml
@@ -10,7 +10,7 @@ steps:
   - trigger: "rails-ci"
     label: ":pipeline: Run buildkite-config CI"
     build:
-      message: "buildkite-config: ${BUILDKITE_MESSAGE}"
+      message: "${BUILDKITE_REPO} ${BUILDKITE_MESSAGE} (${BUILDKITE_BRANCH})"
       branch: "main"
       env:
         CONFIG_REPO: "${BUILDKITE_PULL_REQUEST_REPO}"
