Trim fork out of CONFIG_BRANCH -- it's in CONFIG_REPO

--- a/rails-initial-pipeline.yml
+++ b/rails-initial-pipeline.yml
@@ -19,7 +19,10 @@ steps:
           GIT_REPO="https://github.com/rails/buildkite-config"
         fi
 
-        git clone -b "$${CONFIG_BRANCH-main}" "$$GIT_REPO" .buildkite
+        GIT_BRANCH="$${CONFIG_BRANCH-main}"
+        GIT_BRANCH="$${GIT_BRANCH#*:}"
+
+        git clone -b "$$GIT_BRANCH" "$$GIT_REPO" .buildkite
 
         rm -rf .buildkite/.git
         sh -c "$$PIPELINE_COMMAND"
