Reword the approval prompt to be wordier
This is overly lecture-y (sorry!), but I mostly want to unambiguously
convey the fact that this prompt is a specific and meaningful security
device, and not just a box-checking exercise against trivial "replace
everything with a bitcoin miner" attacks.

--- a/buildkite-config-initial-pipeline.yml
+++ b/buildkite-config-initial-pipeline.yml
@@ -6,7 +6,13 @@
 steps:
   - block: "Review Build Script"
     prompt: |
-      Approval is required. Please review the changes carefully before unblocking.
+      Our CI scripts run outside the docker containers, which are a necessary security layer.
+
+      Approving a build here is equivalent to copy & pasting it into a production ssh window.
+
+      Prefer a second opinion for any nontrivial change, especially outside `pipeline-generate`.
+
+      - @matthewd
   - trigger: "rails-ci"
     label: ":pipeline: Build Rails main with new config"
     build:
