--- a/rails-initial-pipeline.yml
+++ b/rails-initial-pipeline.yml
@@ -50,6 +50,8 @@ steps:
                   - ".buildkite/*"
                   - ".buildkite/**/*"
           timeout_in_minutes: 5
+          agents:
+            queue: "$$BUILDKITE_AGENT_META_DATA_QUEUE"
       NESTED
       fi
       ([ -f .buildkite/.dockerignore ] && cp .buildkite/.dockerignore .dockerignore) || true
@@ -61,12 +63,19 @@ steps:
         docker run --rm
         -v "$$PWD":/app:ro -w /app
         -e CI
+        -e BUILDKITE_AGENT_META_DATA_QUEUE
         -e BUILDKITE_BRANCH
         -e BUILDKITE_BUILD_ID
         -e BUILDKITE_PULL_REQUEST
         -e BUILDKITE_PULL_REQUEST_BASE_BRANCH
         -e BUILDKITE_REBUILT_FROM_BUILD_ID
+        -e BUILD_QUEUE
+        -e DOCKER_IMAGE
+        -e RUN_QUEUE
+        -e QUEUE
         ruby:latest
         .buildkite/pipeline-generate |
         buildkite-agent pipeline upload
     timeout_in_minutes: 5
+    agents:
+      queue: "${QUEUE-builder}"
