--- a/buildkite-config-initial-pipeline.yml
+++ b/buildkite-config-initial-pipeline.yml
@@ -16,15 +16,7 @@ steps:
   - command: |
       git config --global --add safe.directory /workdir
       bundle install
-      bin/diff.rb tmp/buildkite-config.diff
-    artifact_paths:
-      - tmp/buildkite-config.diff
-    plugins:
-      - docker#v5.8.0:
-          image: "ruby:latest"
-  - command: |
-      bundle install
-      bin/update-pr.rb tmp/buildkite-config.diff
+      bin/diff.rb
     plugins:
       - docker#v5.8.0:
           image: "ruby:latest"
@@ -32,8 +24,6 @@ steps:
           propagate-environment: true
           environment:
             - "GITHUB_TOKEN"
-      - artifacts#v1.9.0:
-          download: "tmp/buildkite-config.diff"
   - trigger: "rails-ci"
     label: ":pipeline: Build Rails main with new config"
     build:
