--- a/rails-pipeline-generate.yml
+++ b/rails-pipeline-generate.yml
@@ -26,15 +26,15 @@ steps:
     agents:
       queue: "default"
   - command: |
-      npm install -g pajv
-      curl "https://raw.githubusercontent.com/buildkite/pipeline-schema/main/schema.json" -o schema.json
-      npx pajv -s schema.json -d .buildkite/pipeline.yml
-    label: ":pipeline: yaml-lint pipeline.yml"
+      pip install check-jsonschema
+      check-jsonschema --builtin-schema vendor.buildkite .buildkite/pipeline.yml
+    label: ":pipeline: check-jsonschema pipeline.yml"
     depends_on: generate-pipeline
+    soft_fail: true
     key: lint-pipeline
     plugins:
       - docker#v5.8.0:
-          image: "node:latest"
+          image: "python:3"
       - artifacts#v1.2.0:
           download:
             - ".buildkite/pipeline.yml"
