--- a/rails-initial-pipeline.yml
+++ b/rails-initial-pipeline.yml
@@ -2,30 +2,41 @@
 # configuration in the Buildkite UI.
 
 steps:
-  - name: ":pipeline: fetch config repo and upload pipeline"
+  - name: ":pipeline: rails-initial-pipeline"
     command: |
       PATH=/bin:/usr/bin
       set -e
       treesha="$$(git ls-tree -d HEAD .buildkite | awk '{print $$3}')"
-      echo "+++ No .buildkite/; using fallback repository"
-      rm -rf .buildkite
+      if [ -z "$${treesha}" ]; then
+        echo "+++ No .buildkite/; using fallback repository"
+        rm -rf .buildkite
 
-      if [ -n "$$CONFIG_REPO" ]; then
-        echo "Using CONFIG_REPO: $$CONFIG_REPO"
-        GIT_REPO="$$CONFIG_REPO"
-      elif [ -n "$$CONFIG_FORK" ]; then
-        echo "Using CONFIG_FORK: $$CONFIG_FORK"
-        GIT_REPO="https://github.com/$$CONFIG_FORK/buildkite-config"
+        if [ -n "$$CONFIG_REPO" ]; then
+          GIT_REPO="$$CONFIG_REPO"
+        elif [ -n "$$CONFIG_FORK" ]; then
+          GIT_REPO="https://github.com/$$CONFIG_FORK/buildkite-config"
+        else
+          GIT_REPO="https://github.com/rails/buildkite-config"
+        fi
+
+        GIT_BRANCH="$${CONFIG_BRANCH-main}"
+        GIT_BRANCH="$${GIT_BRANCH#*:}"
+
+        git clone -b "$$GIT_BRANCH" "$$GIT_REPO" .buildkite
+
+        rm -rf .buildkite/.git
+        sh -c "$$PIPELINE_COMMAND"
+      elif [ "$${#treesha}" -lt 40 ]; then
+        echo "Short SHA for .buildkite/"
+        exit 1
+      elif curl -s -S "https://gist.githubusercontent.com/matthewd/3f98bcc9957c8ddf2204a390bf3a6cdd/raw/list" | grep -a -F -x "$${treesha}"; then
+        echo "+++ Known tree; generating pipeline"
+        echo ".buildkite/ tree is $${treesha}"
+        sh -c "$$PIPELINE_COMMAND"
       else
-        echo "Using fallback upstream repo..."
-        GIT_REPO="https://github.com/rails/buildkite-config"
+        echo "+++ Unknown tree; requesting approval"
+        echo ".buildkite/ tree is $${treesha}"
       fi
-
-      GIT_BRANCH="$${CONFIG_BRANCH-main}"
-      GIT_BRANCH="$${GIT_BRANCH#*:}"
-
-      echo "git clone -b \"$$GIT_BRANCH\" \"$$GIT_REPO\" .buildkite"
-      git clone -b "$$GIT_BRANCH" "$$GIT_REPO" .buildkite
 
       rm -rf .buildkite/.git
       buildkite-agent pipeline upload <<'NESTED'
@@ -58,11 +69,10 @@ steps:
           agents:
             queue: "default"
       NESTED
-
       ([ -f .buildkite/.dockerignore ] && cp .buildkite/.dockerignore .dockerignore) || true
     plugins:
       - artifacts#v1.2.0:
-          upload: [".buildkite/**/*", ".buildkite/pipelines", ".dockerignore"]
+          upload: [".buildkite/**/*", ".dockerignore"]
     timeout_in_minutes: 5
     agents:
       queue: "default"
