wip: poc: buildkite-builder

--- a/buildkite-config-initial-pipeline.yml
+++ b/buildkite-config-initial-pipeline.yml
@@ -53,7 +53,7 @@ steps:
       message: "[${BUILDKITE_BRANCH}] ${BUILDKITE_MESSAGE}"
       branch: "main"
       env:
-        CONFIG_REPO: "${BUILDKITE_PULL_REQUEST_REPO}"
+        CONFIG_REPO: "${BUILDKITE_REPO}"
         CONFIG_BRANCH: "${BUILDKITE_BRANCH}"
         BUILDKITE_CONFIG_TRIGGER: true # This variable can be used downstream to avoid things like "if branch==main do Y"
   - trigger: "rails-ci"
@@ -63,6 +63,6 @@ steps:
       message: "[${BUILDKITE_BRANCH} / 6-1-stable] ${BUILDKITE_MESSAGE}"
       branch: "6-1-stable"
       env:
-        CONFIG_REPO: "${BUILDKITE_PULL_REQUEST_REPO}"
+        CONFIG_REPO: "${BUILDKITE_REPO}"
         CONFIG_BRANCH: "${BUILDKITE_BRANCH}"
         BUILDKITE_CONFIG_TRIGGER: true # This variable can be used downstream to avoid things like "if branch==main do Y"
