Use info style for annotation so it shows up on every tab
Warning will only show up on 'all', only info and error show up all the time, I think

--- a/buildkite-config-initial-pipeline.yml
+++ b/buildkite-config-initial-pipeline.yml
@@ -36,7 +36,7 @@ steps:
       else
         echo "annotate.diff is not empty"
         cat tmp/annotate.diff
-        printf '%b\n' "$(cat tmp/annotate.diff)" | buildkite-agent annotate --style warning
+        printf '%b\n' "$(cat tmp/annotate.diff)" | buildkite-agent annotate --style info
       fi
     label: ":writing_hand: buildkite-config: annotate diff"
     env:
