Squash meta-ci steps into a single group and let them run in parallel

--- a/buildkite-config-initial-pipeline.yml
+++ b/buildkite-config-initial-pipeline.yml
@@ -13,57 +13,56 @@ steps:
       Prefer a second opinion for any nontrivial change, especially outside `pipeline-generate`.
 
       - @matthewd
-  - command: |
-      git config --global --add safe.directory /workdir
-      bundle install
-      bundle exec rubocop
-    label: ":nail_care: buildkite-config: lint"
-    key: lint
-    plugins:
-      - docker#v5.8.0:
-          image: "ruby:latest"
-  - command: |
-      git config --global --add safe.directory /workdir
-      bundle install
-      bundle exec rake test
-    label: ":test_tube: buildkite-config: rake test"
-    depends_on: lint
-    key: self-test
-    plugins:
-      - docker#v5.8.0:
-          image: "ruby:latest"
-          environment:
-            - CI
-            - BUILDKITE
-            - BUILDKITE_BUILD_ID
-            - BUILDKITE_PIPELINE_NAME
-  - command: |
-      git clone --depth=1 https://github.com/rails/buildkite-config tmp/buildkite-config
-      git clone --depth=1 https://github.com/rails/rails tmp/rails
+  - group:
+    label: ":pipeline: buildkite-config meta-ci"
+    key: "meta"
+    steps:
+    - command: |
+        git config --global --add safe.directory /workdir
+        bundle install
+        bundle exec rubocop
+      label: ":nail_care: buildkite-config: lint"
+      plugins:
+        - docker#v5.8.0:
+            image: "ruby:latest"
+    - command: |
+        git config --global --add safe.directory /workdir
+        bundle install
+        bundle exec rake test
+      label: ":test_tube: buildkite-config: rake test"
+      plugins:
+        - docker#v5.8.0:
+            image: "ruby:latest"
+            environment:
+              - CI
+              - BUILDKITE
+              - BUILDKITE_BUILD_ID
+              - BUILDKITE_PIPELINE_NAME
+    - command: |
+        git clone --depth=1 https://github.com/rails/buildkite-config tmp/buildkite-config
+        git clone --depth=1 https://github.com/rails/rails tmp/rails
 
-      sh -c "$$ANNOTATE_COMMAND" > tmp/annotate.diff
-      if [[ -z $(grep '[^[:space:]]' tmp/annotate.diff) ]]; then
-        echo "annotate.diff is empty"
-      else
-        echo "annotate.diff is not empty"
-        cat tmp/annotate.diff
-        printf '%b\n' "$(cat tmp/annotate.diff)" | buildkite-agent annotate --style info
-      fi
-    label: ":writing_hand: buildkite-config: annotate diff"
-    env:
-      BUNDLE_FROZEN: true
-      ANNOTATE_COMMAND: >-
-        docker run --rm
-        -v "$$PWD":/app:ro -w /app
-        -v "$$PWD/tmp":/app/tmp:rw
-        -e BUNDLE_FROZEN
-        ruby:latest
-        ./pipeline-annotate
-    key: diff
-    depends_on: self-test
+        sh -c "$$ANNOTATE_COMMAND" > tmp/annotate.diff
+        if [[ -z $(grep '[^[:space:]]' tmp/annotate.diff) ]]; then
+          echo "annotate.diff is empty"
+        else
+          echo "annotate.diff is not empty"
+          cat tmp/annotate.diff
+          printf '%b\n' "$(cat tmp/annotate.diff)" | buildkite-agent annotate --style info
+        fi
+      label: ":writing_hand: buildkite-config: annotate diff"
+      env:
+        BUNDLE_FROZEN: true
+        ANNOTATE_COMMAND: >-
+          docker run --rm
+          -v "$$PWD":/app:ro -w /app
+          -v "$$PWD/tmp":/app/tmp:rw
+          -e BUNDLE_FROZEN
+          ruby:latest
+          ./pipeline-annotate
   - trigger: "rails-ci"
     label: ":pipeline: Build Rails main with new config"
-    depends_on: diff
+    depends_on: meta
     build:
       message: "[${BUILDKITE_BRANCH}] ${BUILDKITE_MESSAGE}"
       branch: "main"
@@ -73,7 +72,7 @@ steps:
         BUILDKITE_CONFIG_TRIGGER: true # This variable can be used downstream to avoid things like "if branch==main do Y"
   - trigger: "rails-ci"
     label: ":pipeline: Build Rails 6-1-stable with new config"
-    depends_on: diff
+    depends_on: meta
     build:
       message: "[${BUILDKITE_BRANCH} / 6-1-stable] ${BUILDKITE_MESSAGE}"
       branch: "6-1-stable"
