--- a/rails-nightly-initial-pipeline.yml
+++ b/rails-nightly-initial-pipeline.yml
@@ -68,7 +68,7 @@ steps:
         -e BUILDKITE_AGENT_META_DATA_QUEUE
         -e BUILDKITE_BRANCH
         -e BUILDKITE_BUILD_ID
-        -e BUILDKITE_PIPELINE_NAME
+        -e BUILDKITE_PIPELINE_SLUG
         -e BUILDKITE_PULL_REQUEST
         -e BUILDKITE_PULL_REQUEST_BASE_BRANCH
         -e BUILDKITE_REBUILT_FROM_BUILD_ID
