Add docs-preview pipeline for previewing documentation changes
Depends on rails/rails#51055 and some environment setup.

--- a/rails-initial-pipeline.yml
+++ b/rails-initial-pipeline.yml
@@ -77,7 +77,7 @@ steps:
         -e RUN_QUEUE
         -e QUEUE
         ruby:latest
-        .buildkite/pipeline-generate |
+        .buildkite/pipeline-generate rails-ci |
         buildkite-agent pipeline upload
     timeout_in_minutes: 5
     agents:
