--- a/rails-nightly-initial-pipeline.yml
+++ b/rails-nightly-initial-pipeline.yml
@@ -77,7 +77,7 @@ steps:
         -e RUN_QUEUE
         -e QUEUE
         ruby:latest
-        .buildkite/pipeline-generate --nightly |
+        .buildkite/pipeline-generate rails-ci-nightly |
         buildkite-agent pipeline upload
     timeout_in_minutes: 5
     agents:
