Don't need to block builds to main
Assuming that anyone who merges to main is aware of the consequences of running this build.

--- a/buildkite-config-initial-pipeline.yml
+++ b/buildkite-config-initial-pipeline.yml
@@ -5,6 +5,7 @@
 
 steps:
   - block: "Review Build Script"
+    branches: "!main"
     prompt: |
       Our CI scripts run outside the docker containers, which are a necessary security layer.
 
