--- a/pipelines/docs-preview/initial.yml
+++ b/pipelines/docs-preview/initial.yml
@@ -9,19 +9,13 @@ steps:
     command: |
       PATH=/bin:/usr/bin
       set -e
-      echo "+++ No .buildkite/; using fallback repository"
-      rm -rf .buildkite
-
-      if [ -n "$$CONFIG_REPO" ]; then
-        GIT_REPO="$$CONFIG_REPO"
-      elif [ -n "$$CONFIG_FORK" ]; then
-        GIT_REPO="https://github.com/$$CONFIG_FORK/buildkite-config"
+      if [ -d ".buildkite" ]; then
+        echo "+++ :bk-status-failed: .buildkite/ already exists; please remove it and try again"
+        exit 1
       else
-        GIT_REPO="https://github.com/rails/buildkite-config"
-      fi
 
-      GIT_BRANCH="$${CONFIG_BRANCH-main}"
-      GIT_BRANCH="$${GIT_BRANCH#*:}"
+      GIT_REPO="https://github.com/rails/buildkite-config"
+      GIT_BRANCH="main"
 
       echo "Cloning buildkite-config:"
       echo "git clone -b \"$$GIT_BRANCH\" \"$$GIT_REPO\" .buildkite"
@@ -29,10 +23,20 @@ steps:
 
       rm -rf .buildkite/.git
       sh -c "$$PIPELINE_COMMAND"
+
       ([ -f .buildkite/.dockerignore ] && cp .buildkite/.dockerignore .dockerignore) || true
     plugins:
-      - artifacts#v1.2.0:
-          upload: [".buildkite/**/*", ".dockerignore"]
+      - artifacts#v1.9.3:
+          upload: ".dockerignore"
+      - artifacts#v1.9.3:
+          upload:
+            - .buildkite/.empty
+            - .buildkite/docker-compose.yml
+            - .buildkite/Dockerfile
+            - .buildkite/Dockerfile.beanstalkd
+            - .buildkite/mysql-initdb.d
+            - .buildkite/runner
+          compressed: ".buildkite.tgz"
     env:
       PIPELINE_COMMAND: >-
         docker run --rm
@@ -50,5 +54,5 @@ steps:
         -e RUN_QUEUE
         -e QUEUE
         ruby:latest
-        .buildkite/pipeline-generate docs-preview |
+        .buildkite/bin/pipeline-generate docs-preview |
         buildkite-agent pipeline upload
