--- a/pipelines/docs-preview/initial.yml
+++ b/pipelines/docs-preview/initial.yml
@@ -9,13 +9,20 @@ steps:
     command: |
       PATH=/bin:/usr/bin
       set -e
+
       if [ -d ".buildkite" ]; then
         echo "+++ :bk-status-failed: .buildkite/ already exists; please remove it and try again"
         exit 1
-      else
+      fi
 
-      GIT_REPO="https://github.com/rails/buildkite-config"
-      GIT_BRANCH="main"
+      if [ -n "$$CONFIG_REPO" ]; then
+        GIT_REPO="$$CONFIG_REPO"
+      else
+        GIT_REPO="https://github.com/rails/buildkite-config"
+      fi
+
+      GIT_BRANCH="$${CONFIG_BRANCH-main}"
+      GIT_BRANCH="$${GIT_BRANCH#*:}"
 
       echo "Cloning buildkite-config:"
       echo "git clone -b \"$$GIT_BRANCH\" \"$$GIT_REPO\" .buildkite"
@@ -25,6 +32,7 @@ steps:
       sh -c "$$PIPELINE_COMMAND"
 
       ([ -f .buildkite/.dockerignore ] && cp .buildkite/.dockerignore .dockerignore) || true
+
     plugins:
       - artifacts#v1.9.3:
           upload: ".dockerignore"
@@ -38,21 +46,24 @@ steps:
             - .buildkite/runner
           compressed: ".buildkite.tgz"
     env:
+      BUNDLE_FROZEN: true
       PIPELINE_COMMAND: >-
         docker run --rm
         -v "$$PWD":/app:ro -w /app
         -e CI
+        -e BUILDKITE
         -e BUILDKITE_AGENT_META_DATA_QUEUE
         -e BUILDKITE_BRANCH
         -e BUILDKITE_BUILD_ID
-        -e BUILDKITE_PIPELINE_SLUG
         -e BUILDKITE_PULL_REQUEST
         -e BUILDKITE_PULL_REQUEST_BASE_BRANCH
         -e BUILDKITE_REBUILT_FROM_BUILD_ID
         -e BUILD_QUEUE
+        -e BUNDLE_FROZEN
         -e DOCKER_IMAGE
         -e RUN_QUEUE
         -e QUEUE
         ruby:latest
         .buildkite/bin/pipeline-generate docs-preview |
         buildkite-agent pipeline upload
+    timeout_in_minutes: 5
