Avoid hardcoding repo in fetch-pr

--- a/pipelines/rails-ci/initial.yml
+++ b/pipelines/rails-ci/initial.yml
@@ -31,6 +31,7 @@ steps:
       (docker run --rm \
         -v "$$PWD":/app:ro -w /app \
         -e GITHUB_PUBLIC_REPO_TOKEN \
+        -e BUILDKITE_REPO \
         -e BUILDKITE_PULL_REQUEST \
         ruby:latest \
         .buildkite/bin/fetch-pr > .buildkite/tmp/.pr-meta.json) || true
