Update rails-ci pipeline sto run on Buildkite hosted agents
An experiment in changing the rails CI pipeline from "self-hosted"
agents to "hosted" agents, a recently release Buildkite feature [1].

The hosted agents linux environment is superficially quite similar to
the Elastic Stack for AWS, so the required changes are fairly minimal.
Roughly half the changes are to take advantage of some performance
optimisations available on hosted agents (like cache volumes, and
remote buildkit builders with cache that last across builds).

The essential changes:

* Read the OCI registry from the environment rather than hard code an
  ECR registry. The current self-hosted agents run in AWS and can access
  ECR, but the hosted agent environment has access to its own registry
  specifically for use cases like this - building an image at the start
  of the build and then reusing it in later jobs
* Changing the queue from `default` or `builder`, to `hosted`

Optimisations:

* There's no need to use the docker-compose plugins cache_from and
  image_name shenanigans. The images built at the start of each build
  use a remote buildkit builder with cache that is s hared between
  builds. The cache is typically warm, and when it is the image build
  time drops from ~2 mins to ~18sec
* Use plain buildkit to build the images, without the docker compose
  plugin. This avoids the image being exported from buildkit to docker,
  and when the buildkit cache is warm the jobs complete in as little as
  18s. This bypasses the docker-compse built in support for separating
  building and running, but the docker-compose.yml already kinda
  bypasses that by hard coding the image used in the run jobs (using the
  IMAGE_NAME env var)
* Create a cache volume for ruby gems that are installed in docker
  during the initial step. This shaves ~30s off the build time

[1] https://buildkite.com/docs/pipelines/hosted-agents/overview

--- a/pipelines/rails-ci/initial.yml
+++ b/pipelines/rails-ci/initial.yml
@@ -1,9 +1,15 @@
 # This file is never read -- it's just a copy of the pipeline's
 # configuration in the Buildkite UI.
+env:
+  CONFIG_REPO: "https://github.com/yob/buildkite-config"
+  CONFIG_BRANCH: "hosted"
 
 steps:
   - name: ":pipeline: rails-initial-pipeline"
     command: |
+      echo "Fetching registry details"
+      export REGISTRY="$$(nsc workspace describe -o json -k registry_url)"
+
       PATH=/bin:/usr/bin
       set -e
 
@@ -30,17 +36,22 @@ steps:
       echo "Fetching pull-request metadata:"
       (docker run --rm \
         -v "$$PWD":/app:ro -w /app \
+        -v "$$PWD/cache/bundler":/usr/local/bundle \
         -e GITHUB_PUBLIC_REPO_TOKEN \
         -e BUILDKITE_REPO \
         -e BUILDKITE_PULL_REQUEST \
         ruby:latest \
         .buildkite/bin/fetch-pr > .buildkite/tmp/.pr-meta.json) || true
 
+
       echo "Generating pipeline:"
       sh -c "$$PIPELINE_COMMAND"
 
       ([ -f .buildkite/.dockerignore ] && cp .buildkite/.dockerignore .dockerignore) || true
-
+    cache:
+      paths:
+        - "cache/bundler"
+      name: "rails-initial-bundler-cache"
     plugins:
       - artifacts#v1.9.3:
           upload: ".dockerignore"
@@ -58,6 +69,7 @@ steps:
       PIPELINE_COMMAND: >-
         docker run --rm
         -v "$$PWD":/app:ro -w /app
+        -v "$$PWD/cache/bundler":/usr/local/bundle
         -e CI
         -e BUILDKITE
         -e BUILDKITE_AGENT_META_DATA_QUEUE
@@ -72,9 +84,10 @@ steps:
         -e DOCKER_IMAGE
         -e RUN_QUEUE
         -e QUEUE
+        -e REGISTRY
         ruby:latest
         .buildkite/bin/pipeline-generate rails-ci |
         buildkite-agent pipeline upload
     timeout_in_minutes: 5
     agents:
-      queue: "${QUEUE-builder}"
+      queue: hosted
