Try mariadb:latest

--- a/pipelines/rails-ci/initial.yml
+++ b/pipelines/rails-ci/initial.yml
@@ -50,6 +50,7 @@ steps:
             - .buildkite/docker-compose.yml
             - .buildkite/Dockerfile
             - .buildkite/Dockerfile.beanstalkd
+            - .buildkite/mariadb-conf.d
             - .buildkite/mysql-initdb.d
             - .buildkite/runner
           compressed: ".buildkite.tgz"
