--- a/pipelines/docs-preview/initial.yml
+++ b/pipelines/docs-preview/initial.yml
@@ -40,6 +40,7 @@ steps:
             - .buildkite/docker-compose.yml
             - .buildkite/Dockerfile
             - .buildkite/Dockerfile.beanstalkd
+            - .buildkite/mariadb-conf.d
             - .buildkite/mysql-initdb.d
             - .buildkite/runner
           compressed: ".buildkite.tgz"
