--- a/pipelines/rails-ci-nightly/initial.yml
+++ b/pipelines/rails-ci-nightly/initial.yml
@@ -39,6 +39,7 @@ steps:
             - .buildkite/docker-compose.yml
             - .buildkite/Dockerfile
             - .buildkite/Dockerfile.beanstalkd
+            - .buildkite/mariadb-conf.d
             - .buildkite/mysql-initdb.d
             - .buildkite/runner
           compressed: ".buildkite.tgz"
